--- a/1.18/src/main/resources/assets/wynnvp/lang/en_us.json
+++ b/1.18/src/main/resources/assets/wynnvp/lang/en_us.json
@@ -4,5 +4,7 @@
   "text.autoconfig.wynnvp.option.logMissingLines": "Report missing lines",
   "text.autoconfig.wynnvp.option.anonymous": "Report missing lines anonymously",
   "text.autoconfig.wynnvp.option.sendFunFact": "Fun facts",
-  "text.autoconfig.wynnvp.option.highlightSpeaker": "Highlight speaker"
+  "text.autoconfig.wynnvp.option.highlightSpeaker": "Highlight speaker",
+  "text.autoconfig.wynnvp.optionblockCutOff": "Block cut off",
+  "text.autoconfig.wynnvp.option.highlightSpeaker.@Tooltip": "Should there be an aura of particles highlighting the source of the sound?"
 }
