feat: Add configuration option to enable or disable sound downloads. Default setting is now false meaning all files are streamed.

--- a/src/main/resources/assets/wynnvp/lang/en_us.json
+++ b/src/main/resources/assets/wynnvp/lang/en_us.json
@@ -2,10 +2,12 @@
   "text.autoconfig.wynnvp.option.anonymous": "Report missing lines anonymously",
   "text.autoconfig.wynnvp.option.autoProgress": "Auto progress",
   "text.autoconfig.wynnvp.option.autoProgress.@Tooltip": "After an NPC finishes their line, it will automatically forward to the next line",
+  "text.autoconfig.wynnvp.option.downloadSounds": "Download Sounds",
+  "text.autoconfig.wynnvp.option.downloadSounds.@Tooltip": "If all sounds should be downloaded. Enable this if you experience high latency in audio playback",
   "text.autoconfig.wynnvp.option.blockCutOff": "Block cut off",
   "text.autoconfig.wynnvp.option.doLogging": "Do Logging",
   "text.autoconfig.wynnvp.option.highlightSpeaker": "Highlight speaker",
-  "text.autoconfig.wynnvp.option.highlightSpeaker.@Tooltip": "Should there be an aura of particles highlighting the source of the sound?",
+  "text.autoconfig.wynnvp.option.highlightSpeaker.@Tooltip": "Should there be an aura of particles highlighting the source of the sound? This is mostly useful for debugging",
   "text.autoconfig.wynnvp.option.logDialogueLines": "Log dialogue lines",
   "text.autoconfig.wynnvp.option.logDialogueLines.@Tooltip": "If each time a dialogue that is encountered should be put into the vowlog.txt file",
   "text.autoconfig.wynnvp.option.logPlayingInformation": "Log playing information",
