feat: Added a debug setting to change the Path of where the audio is fetched from

--- a/src/main/resources/assets/wynnvp/lang/en_us.json
+++ b/src/main/resources/assets/wynnvp/lang/en_us.json
@@ -11,6 +11,10 @@
   "text.autoconfig.wynnvp.option.debugAndLogs.logDialogueLines.@Tooltip": "If each time a dialogue that is encountered should be put into the vowlog.txt file",
   "text.autoconfig.wynnvp.option.debugAndLogs.logPlayingInformation": "Log playing information",
   "text.autoconfig.wynnvp.option.debugAndLogs.logPlayingInformation.@Tooltip": "Log a bunch of miscellaneous things about playing sounds",
+  "text.autoconfig.wynnvp.option.debugAndLogs.useCustomAudioPath": "Use custom audio path",
+  "text.autoconfig.wynnvp.option.debugAndLogs.useCustomAudioPath.@Tooltip": "If the custom audio path should be used that is defined in the next option",
+  "text.autoconfig.wynnvp.option.debugAndLogs.customAudioPath": "Custom audio path",
+  "text.autoconfig.wynnvp.option.debugAndLogs.customAudioPath.@Tooltip": "Custom path to audio files. This can be a url starting with (http...) or a local folder path.",
   "text.autoconfig.wynnvp.option.debugAndLogs.onlyLogNotPlayingLines": "Only log Not Playing Lines",
   "text.autoconfig.wynnvp.option.debugAndLogs.onlyLogNotPlayingLines.@Tooltip": "A setting for logDialogueLines to only log missing lines",
   "text.autoconfig.wynnvp.option.doLogging": "Do Logging",
