feat: Add reverb configuration setting

--- a/src/main/resources/assets/wynnvp/lang/en_us.json
+++ b/src/main/resources/assets/wynnvp/lang/en_us.json
@@ -7,6 +7,8 @@
   "text.autoconfig.wynnvp.option.debugAndLogs": "Debug and Logs",
   "text.autoconfig.wynnvp.option.debugAndLogs.customAudioPath": "Custom audio path",
   "text.autoconfig.wynnvp.option.debugAndLogs.customAudioPath.@Tooltip": "Custom path to audio files. This can be a url starting with (http...) or a local folder path.",
+  "text.autoconfig.wynnvp.option.debugAndLogs.customSoundsJsonPath": "Custom sounds.json path",
+  "text.autoconfig.wynnvp.option.debugAndLogs.customSoundsJsonPath.@Tooltip": "Path to a custom sounds.json file containing dialogue-to-audio mappings. This will override the default sounds.json.",
   "text.autoconfig.wynnvp.option.debugAndLogs.highlightSpeaker": "Highlight speaker",
   "text.autoconfig.wynnvp.option.debugAndLogs.highlightSpeaker.@Tooltip": "Should there be an aura of particles highlighting the source of the sound? This is mostly useful for debugging",
   "text.autoconfig.wynnvp.option.debugAndLogs.logDialogueLines": "Log dialogue lines",
@@ -17,9 +19,13 @@
   "text.autoconfig.wynnvp.option.debugAndLogs.onlyLogNotPlayingLines.@Tooltip": "A setting for logDialogueLines to only log missing lines",
   "text.autoconfig.wynnvp.option.debugAndLogs.useCustomAudioPath": "Use custom audio path",
   "text.autoconfig.wynnvp.option.debugAndLogs.useCustomAudioPath.@Tooltip": "If the custom audio path should be used that is defined in the next option",
+  "text.autoconfig.wynnvp.option.debugAndLogs.useCustomSoundsJson": "Use custom sounds.json",
+  "text.autoconfig.wynnvp.option.debugAndLogs.useCustomSoundsJson.@Tooltip": "Enable loading dialogue mappings from a custom sounds.json file instead of the default one",
   "text.autoconfig.wynnvp.option.doLogging": "Do Logging",
   "text.autoconfig.wynnvp.option.downloadSounds": "Download Sounds",
   "text.autoconfig.wynnvp.option.downloadSounds.@Tooltip": "If all sounds should be downloaded. Enable this if you experience high latency in audio playback",
+  "text.autoconfig.wynnvp.option.enableReverb": "Enable reverb",
+  "text.autoconfig.wynnvp.option.enableReverb.@Tooltip": "Adds environmental reverb effects to NPC voices based on their location (caves, buildings, etc.)",
   "text.autoconfig.wynnvp.option.playAllSoundsOnPlayer": "Play all sounds on player",
   "text.autoconfig.wynnvp.option.playAllSoundsOnPlayer.@Tooltip": "This will disable the stereo effect of voices.",
   "text.autoconfig.wynnvp.option.playbackSpeed": "Playback speed %",
